# multimodal-transcription

./: .cursorrules  .gitignore  DATA_SETUP_GUIDE.md  Dockerfile  ORGANIZED_STRUCTURE.md  README copy.md  README.md  docker-compose-batch.yml  docker-compose.yml  docker-entrypoint.sh  docker-run-batch.sh  ecr-task-definition.json  ecs-task-definition.json  minimal-task-definition.json  pyproject.toml  requirements.txt  setup.py  simple-ecr-task-definition.json  simple-task-definition.json  test_deployed_s3_storage.py  test_deployed_single_video.py  test_ecr_local.sh  test_pipeline.py  test_s3_upload.py
.github/: PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-deploy.yml  auto-deploy.yml.disabled  batch-processing.yml  ci.yml  deploy-and-test.yml  deploy-unified.yml  deploy.yml  deploy.yml.disabled  docker-publish.yml  docker-test.yml  ecs-deploy.yml  manual-test.yml  performance-test.yml  quick-test.yml  release.yml  simple-deploy.yml
docker/: DOCKER.md  docker-run.sh
docs/: BATCH_PROCESSING.md  DATABASE_LIKE_REFACTORING.md  MODULAR_STRUCTURE.md
examples/: advanced_usage.py  basic_usage.py  batch_processing_example.py  data_management_example.py  database_like_usage.py  enhanced_usage.py  transcript_validation_example.py  validate_transcript.py
outputs/pipeline_runs/transcription_run_20250922_154128/: Audrey_2025-04-06_6_20_PM-2_pipeline_results.json
outputs/pipeline_runs/transcription_run_20250922_154128/chunks/: Audrey_2025-04-06_6_20_PM-2_metadata.json
outputs/pipeline_runs/transcription_run_20250922_154128/transcripts/: Audrey_2025-04-06_6_20_PM-2_clean_transcript.json  Audrey_2025-04-06_6_20_PM-2_full_transcript.json  Audrey_2025-04-06_6_20_PM-2_full_transcript.txt  Audrey_2025-04-06_6_20_PM-2_transcript.json
outputs/pipeline_runs/transcription_run_20250922_154643/: Audrey_2025-04-06_6_20_PM-2_pipeline_results.json
outputs/pipeline_runs/transcription_run_20250922_154643/chunks/: Audrey_2025-04-06_6_20_PM-2_metadata.json
outputs/pipeline_runs/transcription_run_20250922_154643/transcripts/: Audrey_2025-04-06_6_20_PM-2_clean_transcript.json  Audrey_2025-04-06_6_20_PM-2_full_transcript.json  (+2 more)
outputs/transcript_cache/: Audrey_2025-04-06_6_20_PM-2_0bb3c70fea6c9a60.json
scripts/: README.md  fetch_videos.py  push-to-ecr.sh  test_docker_s3_deployed.sh  test_ecr_deployed.sh  test_ecs_s3_deployed.sh  test_notification.py  test_s3_download.py  test_single_video.py  test_video_fetcher.py
src/: batch_processor.py  batch_transcription_processor.py  models.py  process_single_video.py  prompt.txt  transcription_pipeline.py  transcription_pipeline_new.py
src/ai/: __init__.py  gemini_client.py  model_handler.py  prompt_manager.py
src/api/: __init__.py  notification_client.py  video_fetcher.py
src/core/: __init__.py  file_manager.py  pipeline.py
src/core/chunking/: __init__.py  chunk_processor.py  video_chunker.py
src/core/processing/: __init__.py  parallel_processor.py  result_processor.py
src/core/transcription/: __init__.py  transcript_analyzer.py  transcript_combiner.py  transcript_formatter.py
src/core/validation/: __init__.py  transcript_validator.py
src/data/: data_setup.py  setup_data.py
src/database/: __init__.py  mongodb_client.py  test_mongodb.py  test_pipeline_integration.py  test_transcription_storage.py  transcription_storage.py  video_database.py
src/legacy/: README.md
src/storage/: __init__.py  cache_manager.py  file_storage.py  upload_manager.py  video_repository.py
src/utils/: __init__.py  config_utils.py  file_utils.py  s3_utils.py  video_utils.py
terraform/: README.md  TROUBLESHOOTING_EFS.md  ecr.tf  ecs.tf  efs.tf  eventbridge.tf  main.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf
tests/: test_database_integration.py  test_modular_structure.py  validate_transcript.py
tests/test_outputs/transcripts/: test_video_clean_transcript.json
